<resources>
    <string name="app_name">Atlas</string>

    <string name="default_web_client_id">102790904151-nk8kl5clf0d7n7dvl6a2oq902bp66134.apps.googleusercontent.com</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Rutinas">Rutinas</string>
    <string name="Item_Crear">Crear</string>
    <string name="Item_Chat">Chat</string>
    <string name="Item_Perfil">Perfil</string>

    <string name="TituloRL">Titulo</string>

    <string name="Ingresar_email">Ingresar con Email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Contraseña</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>
    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <!-- Completar Perfil -->
    <string name="Txt_completar_perfil">Completar perfil</string>
    <string name="Txt_nombre">Nombre completo</string>
    <string name="Txt_telefono">Teléfono (opcional)</string>
    <string name="Txt_fecta_nac">Fecha de nacimiento</string>
    <string name="Txt_genero">Género</string>
    <string name="Txt_peso">Peso (kg)</string>
    <string name="Txt_altura">Altura (cm)</string>
    <string name="Btn_guardar_datos">Finalizar Registro</string>

    <!-- Perfil -->
    <string name="Txt_username">Usuario</string>
    <string name="Btn_editar">Editar</string>
    <string name="Txt_entrenos">Entrenos</string>
    <string name="Txt_num_entrenos">0</string>
    <string name="Txt_seguidores">Seguidores</string>
    <string name="Txt_num_seguidores">0</string>
    <string name="Txt_siguiendo">Siguiendo</string>
    <string name="Txt_num_siguiendo">0</string>
    <string name="formato_minutos">%1$d minutos esta semana</string>
    <string name="formato_horas">%1$d horas esta semana</string>
    <string name="formato_horas_minutos">%1$d horas %2$d min esta semana</string>
    <string name="Txt_horas_semana">Esta semana</string>
    <string name="Txt_grafica">Gráfica</string>
    <string name="Txt_btn_duracion">Duración</string>
    <string name="Txt_btn_volumen">Volumen</string>
    <string name="Txt_btn_repeticiones">Repeticiones</string>
    <string name="Txt_estadisticas">Estadísticas</string>
    <string name="Txt_ejercicios">Ejercicios</string>
    <string name="Txt_medidas">Medidas</string>
    <string name="Txt_calendario">Calendario</string>
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>

    <!-- Editar Perfil -->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombres Completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Et_cod_tel">+00</string>
    <string name="Et_telefono">Teléfono</string>
    <string name="Btn_aztualizar">Actualizar</string>

    <!-- Ícono del usuario en chats -->
    <string name="item_uid">Uid</string>
    <string name="item_nombre">Nombre</string>
    <string name="item_email">Email</string>

    <!-- Buscra usuario -->
    <string name="tvSinUsuarios">No hay usuarios disponibles</string>
    <string name="Et_buscar_usuario">Buscar usuario</string>

    <!-- Mensajes -->
    <string name="Txt_nombre_usuario">Nombres</string>
    <string name="Et_mensaje_chat">Escribe un mensaje</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>

    <!-- Visualizador -->
    <string name="BtnCerrarVisualizador">Cerrar</string>

</resources>